star wars responsive grid

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Star Wars Responsive Challenge</title>
@@ -14,9 +15,90 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="float-grid.css">
 
 </head>
+
 <body>
+  <header>
+    <div class="row">
+      <div class="col-12">
+        <h1>Star Wars Characters</h1>
+        <span>Incomplete list</span>
+      </div>
+    </div>
+  </header>
+
+  <div class="row">
+    <div class="col-4">
+      <div class="card">
+        <img src="images/rey_square.png" alt="rey" class="card-image">
+        <div class="card-content">
+          <h2>Ray</h2>
+          <span>Protagonist, from Tatoonie</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-4">
+      <div class="card">
+        <img src="images/finn_square.png" alt="finn" class="card-image">
+        <div class="card-content">
+          <h2>Finn</h2>
+          <span>Storm Trooper, befriends Ray</span>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-4">
+      <div class="card">
+        <img src="images/kylo_square.png" alt="kylo" class="card-image">
+        <div class="card-content">
+          <h2>Kylo</h2>
+          <span>Main villain, or is he?</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="col-4">
+      <div class="card">
+        <img src="images/poe_square.png" alt="poe" class="card-image">
+        <div class="card-content">
+          <h2>Poe</h2>
+          <span>Neutral pilot</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-4">
+      <div class="card">
+        <img src="images/chewbacca_square.png" alt="chewbacca" class="card-image">
+        <div class="card-content">
+          <h2>Chewbacca</h2>
+          <span>A great first mate</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-4">
+      <div class="card">
+        <img src="images/yoda_square.png" alt="yoda" class="card-image">
+        <div class="card-content">
+          <h2>Yoda</h2>
+          <span>Wise old Jedi Master</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  </main>
+
 
 </body>
+
 </html>
